refactor(architecture): modernize Java types and harden data updates
Refactor immutable value objects to records, adopt pattern matching and final
fields, and update consumers to record accessors. Improve GameData update
validation with fixed manifest boundaries, staging cleanup, hashing, and safer
replacement handling. Standardize formatting and documentation across
production and test code, and add repository contribution guidelines.